# argocd-example-app

./: README.md  build_and_push.sh
deploy/: example-app-deployment.yaml  example-app-svc.yaml
src/: Dockerfile  main.py  pyproject.toml
src/static/: index.html
