[tool.poetry]
name = "example-app"
version = "0.1.0"
description = "Argocd example app"
authors = ["SUU Argo"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110.2"
argo-workflows = "^6.5.6"
uvicorn = {extras = ["standard"], version = "^0.29.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"